--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==3.3.2
 colorama==0.4.6
 contourpy==1.3.0
 cycler==0.12.1
+dgl==1.1.1
 et-xmlfile==1.1.0
 filelock==3.16.1
 fonttools==4.54.0
@@ -33,6 +34,7 @@ packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
 psutil==6.0.0
+PyGCL==0.1.2
 pynndescent==0.5.13
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
